# linpop

./: .gitignore  CMakeLists.txt  README.md  Test.c  UI进度完成打卡.md  main.c
include/: DATABASE_friends.h  DATABASE_group.h  DATABASE_groupMessage.h  DATABASE_groupUser.h  DATABASE_message.h  DATABASE_mysql.h  DATABASE_user.h  NET_client.h  NET_macro.h  NET_server.h  NET_socket.h  UI_chatView.h  UI_interface.h  UI_login.h  UI_macro.h
src/: DATABASE_friends.c  DATABASE_group.c  DATABASE_groupMessage.c  DATABASE_groupUser.c  DATABASE_message.c  DATABASE_mysql.c  DATABASE_user.c  NET_client.c  NET_server.c  NET_socket.c  UI_addFriend.c  UI_chatView.c  UI_createGroup.c  UI_dialog.c  UI_groupChatView.c  UI_history.c  UI_homepage.c  UI_login.c  UI_test_dependence.c  UTIL_cJSON.c  client  client.c  client.h  groupChatView.c  makefile  server  server.c  server.h  socket.c  socket.h  testMain.c
src/view/: UIgroup_进度打卡.md  hello.c
